src/objects/Question__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Defines the type of the custom question, such as Text, Date, or Picklist</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fr_Id__c</fullName>
        <externalId>true</externalId>
        <label>Funraise ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Funraise Question</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Question-{0000}</displayFormat>
        <label>Funraise Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funraise Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>